RESOLVED FIXED128842
Margin tiles are not created for top and left sides when there is a < 1.0 scale factor
https://bugs.webkit.org/show_bug.cgi?id=128842
Summary Margin tiles are not created for top and left sides when there is a < 1.0 sca...
Beth Dakin
Reported 2014-02-14 14:01:03 PST
The TileController is failing to create margin tiles for the top and left sides when the there a scaled factor on the TileController that is less the 1.0.
Attachments
Patch (1.76 KB, patch)
2014-02-14 14:13 PST, Beth Dakin
simon.fraser: review+
Beth Dakin
Comment 1 2014-02-14 14:13:43 PST
Simon Fraser (smfr)
Comment 2 2014-02-14 14:17:33 PST
Comment on attachment 224252 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=224252&action=review > Source/WebCore/platform/graphics/ca/mac/TileController.mm:474 > + topLeft.setX(floor((float)clampedRect.x() / leftMarginWidth())); floorf? > Source/WebCore/platform/graphics/ca/mac/TileController.mm:479 > + topLeft.setY(floor((float)clampedRect.y() / topMarginHeight())); Ditto.
Beth Dakin
Comment 3 2014-02-14 14:27:25 PST
floorf'd! Fixed with r164135
Note You need to log in before you can comment on or make changes to this bug.