Margin tiles are not created for the top and left sides when there is a < 1.0 scale factor https://bugs.webkit.org/show_bug.cgi?id=128842

Reviewed by Simon Fraser.

floor the result of the computation whenever we have a negative origin, to ensure
that we are rounding 'up' to a larger number of tiles.
* platform/graphics/ca/mac/TileController.mm:
(WebCore::TileController::getTileIndexRangeForRect):



Canonical link: https://commits.webkit.org/146867@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164135 268f45cc-cd09-0410-ab3c-d52691b4dbfc